# FNO-demo

./: README.md  demo.ipynb  pyproject.toml  src.py
