[project]
name = "terra-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "botorch>=0.16.1",
    "gpytorch>=1.15.2",
    "ipykernel>=7.2.0",
    "neuraloperator>=2.0.0",
    "shapely>=2.1.2",
    "simpeg>=0.24.0",
]
